--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
     "name": "tis-cats",
-    "version": "0.0.0",
-    "private": true,
+    "version": "0.0.1",
     "repository": {
         "type": "git",
-        "url": ""
+        "url": "https://github.com/kongu-zz/tis-cats"
     },
     "main": "dist/index.js",
     "typings": "dist/index",
