изменил результат компиляции на es5, commonjs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "module": "CommonJS",
+	"target": "es5",
+//        "module": "es2015",
+//        "target": "es6",
         "noImplicitAny": true,
         "removeComments": false,
         "noEmitHelpers": false,
         "experimentalDecorators": true,
         "jsx": "react",
         "noEmitOnError": true,
-        "module": "es2015",
         
         "declaration": true,
         "outDir": "dist/"
