работающая версия внешнего ts модуля

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "tis-cats",
-    "version": "0.0.1",
+    "version": "0.0.16",
     "repository": {
         "type": "git",
         "url": "https://github.com/kongu-zz/tis-cats"
     },
-    "main": "./dist/index.js",
-    "typings": "./dist/index",
+    "main": "dist/index.js",
+    "typings": "dist/index.d.ts",
     "files": [
-        "./dist/"
+        "dist/"
     ],
     "devDependencies": {
         "awesome-typescript-loader": "^0.15.10",
